@@ -1,3 +1,10 @@
+20060101
+ - (djm) [Makefile.in configure.ac includes.h misc.c]
+         [openbsd-compat/port-tun.c openbsd-compat/port-tun.h] Add support
+         for tunnel forwarding for FreeBSD and NetBSD. NetBSD's support is
+         limited to IPv4 tunnels only, and most versions don't support the
+         tap(4) device at all.
+
 20051229
  - (djm) OpenBSD CVS Sync
    - stevesk@cvs.openbsd.org 2005/12/28 22:46:06
